# AVG

./: .gitignore
car/install/: local_setup.sh  setup.sh
car/install/car_description/lib/car_description/: car_teleop_node.py  cmd_vel_merger.py  follow_waypoints.py  map_republisher.py  room_waypoint.py  simple_car_teleop.py
car/install/car_description/share/ament_index/resource_index/package_run_dependencies/: car_description
car/install/car_description/share/ament_index/resource_index/parent_prefix_path/: car_description
car/install/car_description/share/car_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.sh  package.xml
car/install/car_description/share/car_description/car_world/: main  model.config  model.sdf  new
car/install/car_description/share/car_description/cmake/: car_descriptionConfig-version.cmake  car_descriptionConfig.cmake
car/install/car_description/share/car_description/config/: car.rviz  nav2_params.yaml  slam.yaml
car/install/car_description/share/car_description/environment/: ament_prefix_path.dsv  path.dsv
car/install/car_description/share/car_description/launch/: car.launch.py  nav2_bringup.launch.py  slam.launch.py  teleop.launch.py
car/install/car_description/share/car_description/map/: my_map.pgm  my_map.yaml
car/install/car_description/share/car_description/meshes/WH05/: G.stl  fl_wheel.dae  fr_wheel.dae  rl_wheel.dae  rr_wheel.dae
car/install/car_description/share/car_description/meshes/panther/: base.dae  base_collision.stl
car/install/car_description/share/car_description/urdf/: base.xacro  lidar.xacro  newcar.xacro  robot.xacro  wheel.xacro
car/install/car_rqt_gui/share/car_rqt_gui/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
car/install/car_rqt_gui/share/car_rqt_gui/resource/: plugin.xml
car/log/: latest_build  latest_list
car/src/car_description/: CMakeLists.txt  package.xml
car/src/car_description/car_world/: main  model.config  model.sdf
car/src/car_description/config/: nav2_params.yaml  slam.yaml
car/src/car_description/launch/: car.launch.py  full_navigation.launch.py
car/src/car_description/main/: model.sdf
car/src/car_description/map/: my_map.pgm
car/src/car_description/script/: room_waypoint.py
car/src/car_description/teleop/: cmd_vel_merger.py
car/src/car_description/urdf/: car_with_arm.xacro  newcar.xacro  robotiarm.xacro
car/src/car_description/worlds/: my_car_world.world
car/src/car_rqt_gui/: package.xml  setup.cfg  setup.py  test_gui.py
car/src/car_rqt_gui/car_rqt_gui/: car_rqt_gui_plugin.py
car/src/log/: latest_list
